@@ -37,6 +37,9 @@ New Features
 Bugs Fixed
 ----------
 
+- Fixed bug in Connection.TmpStore: load() would not defer to the backend
+  storage for loading blobs.
+
 - Fix for bug #181712: Make ClientStorage update `lastTransaction` directly
   after connecting to a server, even when no cache verification is necessary.
 
